<resources>
    <string name="app_name">Aviary</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="password_hint">Password</string>
    <string name="email_hint">Email</string>
    <string name="sign_up_button_label">Sign Up</string>
    <string name="signup_error_message">Please make sure you enter an email address and password!</string>
    <string name="signup_error_title">Error!</string>
    <string name="signup_success">Account successfully created! You can now Login.</string>
    <string name="login_error_message">Please make sure you enter an email address and password!</string>
    <string name="login_error_title">Error!</string>
    <string name="login_button_label">Login</string>
    <string name="sign_up_text">Sign Up!</string>
    <string name="title_activity_login">Sign in</string>
    <string name="add_item">Add New Item</string>
    <string name="action_logout">Logout</string>
    <string name="forgot_pass">Forgot your password?</string>
    <string name="welcome_back">Welcome!</string>
    <string name="minimum_password">Your password must be at least six characters long.</string>
    <string name="auth_failed">Authorization Failed.</string>
    <string name="forgot_password_msg">We just need your registered Email and we\'ll send you password reset instructions.</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="bird_family">Select A Bird Family</string>
    <string name="bird_name">Select A Bird</string>
    <string name="bird_gender">Select A Bird\'s Gender</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
